force-app/main/default/objects/Question__c/fields/CorrectAnswerOptions__c.field-meta.xml
<CustomField>
    <fullName>CorrectAnswerOptions__c</fullName>
    <label>Correct Answer Options</label>
    <summaryFilterItems>
        <field>AnswerOption__c.IsCorrect__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>AnswerOption__c.Question__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>