force-app/main/default/objects/Question__c/fields/CorrectWeight__c.field-meta.xml
<CustomField>
    <fullName>CorrectWeight__c</fullName>
    <label>Correct Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>