force-app/main/default/objects/Question__c/fields/IncorrectWeight__c.field-meta.xml
<CustomField>
    <fullName>IncorrectWeight__c</fullName>
    <label>Incorrect Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>