force-app/main/default/objects/Question__c/fields/OrderFormula__c.field-meta.xml
<CustomField>
    <fullName>OrderFormula__c</fullName>
    <formula>IF( Module__r.ShuffleQuestions__c ,
mod( 
    (
       ( value(mid(text(NOW()),18,2)) + value(mid(text(NOW()),12,2)) ) *
       ( value(mid(text(NOW()),18,2)) + value(mid(text(NOW()),15,2)) ) 
    ) / Order__c
    , ( Order__c + 100 )

), Order__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>