force-app/main/default/objects/Question__c/fields/PenaltyPerAttempt__c.field-meta.xml
<CustomField>
    <fullName>PenaltyPerAttempt__c</fullName>
    <label>Penalty per Attempt %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>