force-app/main/default/objects/Question__c/fields/QuestionText__c.field-meta.xml
<CustomField>
    <fullName>QuestionText__c</fullName>
    <inlineHelpText>This is the text that members will respond to.</inlineHelpText>
    <label>Question Text</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>