force-app/main/default/objects/Question__c/fields/ShuffleAnswerOptions__c.field-meta.xml
<CustomField>
    <fullName>ShuffleAnswerOptions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shuffle Answer Options</label>
    <type>Checkbox</type>
</CustomField>