force-app/main/default/objects/Question__c/fields/TotalAnswerOptions__c.field-meta.xml
<CustomField>
    <fullName>TotalAnswerOptions__c</fullName>
    <label>Total Answer Options</label>
    <summaryForeignKey>AnswerOption__c.Question__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>