force-app/main/default/objects/Question__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Multiple Choice</fullName>
            </value>
            <value>
                <fullName>Single Choice</fullName>
            </value>
            <value>
                <fullName>Short Answer</fullName>
            </value>
            <value>
                <fullName>Statement</fullName>
            </value>
            <value>
                <fullName>Matching Options</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>