force-app/main/default/objects/Question__c/validationRules/Cannot_change_type.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_change_type</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Type__c )</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>The question type cannot be changed.</errorMessage>
</ValidationRule>