force-app/main/default/objects/Question__c/validationRules/CannotChangeModule.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotChangeModule</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Module__c )</errorConditionFormula>
    <errorDisplayField>Module__c</errorDisplayField>
    <errorMessage>The module cannot be changed.</errorMessage>
</ValidationRule>