force-app/main/default/objects/Question__c/validationRules/CorrectWeightRange.validationRule-meta.xml
<ValidationRule>
    <fullName>CorrectWeightRange</fullName>
    <active>true</active>
    <description>The Correct Weight must be greater than 0.</description>
    <errorConditionFormula>CorrectWeight__c  &lt;= 0</errorConditionFormula>
    <errorDisplayField>CorrectWeight__c</errorDisplayField>
    <errorMessage>The correct weight must be a positive number.</errorMessage>
</ValidationRule>