force-app/main/default/objects/Question__c/validationRules/CorrectWeightWhenWeightedQuestions.validationRule-meta.xml
<ValidationRule>
    <fullName>CorrectWeightWhenWeightedQuestions</fullName>
    <active>true</active>
    <description>When Module uses Weighted Questions, the field Correct Weight cannot be null.</description>
    <errorConditionFormula>AND( ISNULL( CorrectWeight__c ) , Module__r.WeightedQuestions__c)</errorConditionFormula>
    <errorDisplayField>CorrectWeight__c</errorDisplayField>
    <errorMessage>A value for correct weight must be specified when the corresponding module uses weighted questions.</errorMessage>
</ValidationRule>