force-app/main/default/objects/Question__c/validationRules/LimitOfAnswers.validationRule-meta.xml
<ValidationRule>
    <fullName>LimitOfAnswers</fullName>
    <active>true</active>
    <description>If the question type is &quot;Statement&quot; no more than two answers can be created.</description>
    <errorConditionFormula>AND( TEXT(Type__c)  = &#39;Statement&#39;,  TotalAnswerOptions__c &gt; 2)</errorConditionFormula>
    <errorMessage>For &quot;Statement&quot; questions, no more than two answers can be created.</errorMessage>
</ValidationRule>