force-app/main/default/objects/Question__c/validationRules/PenaltyPerAttemptRange.validationRule-meta.xml
<ValidationRule>
    <fullName>PenaltyPerAttemptRange</fullName>
    <active>true</active>
    <description>Penalty per attempt must have a value  between 0 and 100.</description>
    <errorConditionFormula>OR( PenaltyPerAttempt__c &lt;0, PenaltyPerAttempt__c &gt; 1)</errorConditionFormula>
    <errorMessage>The penalty per attempt must have a value  between 0 and 100.</errorMessage>
</ValidationRule>