force-app/main/default/objects/Question__c/validationRules/QuestionTextRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>QuestionTextRequired</fullName>
    <active>true</active>
    <description>Question text is required.</description>
    <errorConditionFormula>ISNULL(QuestionText__c) || QuestionText__c == &#39;&#39;</errorConditionFormula>
    <errorDisplayField>QuestionText__c</errorDisplayField>
    <errorMessage>The question text is required.</errorMessage>
</ValidationRule>